--- a/css/edit-people.css
+++ b/css/edit-people.css
@@ -45,6 +45,21 @@
     border: 5px solid red;
 }
 
+#EditPeople td
+{
+    padding-bottom: 6px;
+}
+#EditPeople input, #EditPeople select
+{
+    width: 148px;
+    margin-left: 6px;
+    margin-right: 6px;
+}
+#EditPeople #Field-Adres
+{
+    width: 318px;
+}
+
 
 #IDNavigator
 {
