--- a/css/edit-people.css
+++ b/css/edit-people.css
@@ -130,13 +130,14 @@
 
 
 
-td.special_label
+.special_label
 {
     vertical-align: top;
+    height: 250px;
 }
 .special_label div.buttons
 {
-    float: right;
+    /*float: right;*/
     margin-bottom: -10px;
 }
 .special_label div.buttons div
