--- a/inc/templates/edit-people.html
+++ b/inc/templates/edit-people.html
@@ -144,12 +144,16 @@
                 
                 <td>&nbsp;</td><td>&nbsp;</td>
               </tr>
-              <tr>
-                <td colspan="2" id="Studies"  class="special_label">Studies</td>
-                <td colspan="2" id="Secties"  class="special_label">Secties/commissies</td>
-                <td colspan="2" id="Relaties" class="special_label">Relaties</td>
-              </tr>
             </table>
+            <br class="cl" />
+            <div id="sgr-accordion">
+              <h3><a href="#">Studies</a></h3>
+              <div id="Studies"  class="special_label">&nbsp;</div>
+              <h3><a href="#">Secties/commissies</a></h3>
+              <div id="Secties"  class="special_label">&nbsp;</div>
+              <h3><a href="#">Relaties</a></h3>
+              <div id="Relaties" class="special_label">&nbsp;</div>
+            </div>
           </form>
         </section>
         <section class="grid_1">
