--- a/css/edit-people.css
+++ b/css/edit-people.css
@@ -138,7 +138,7 @@
 .special_label div.buttons
 {
     /*float: right;*/
-    margin-bottom: -10px;
+    /*margin-bottom: -10px;*/
 }
 .special_label div.buttons div
 {
@@ -150,7 +150,7 @@
 {
     max-width: 270px;
 }
-td.loading
+.loading
 {
     background-image: url(/img/spinner.gif);
     background-position: center;
