Nieuwe ID-navigator

--- a/inc/templates/edit-people.html
+++ b/inc/templates/edit-people.html
@@ -158,22 +158,28 @@
         </section>
         <section class="grid_1">
           <div id="IDNavigator">
-            <a id="IDNav-fist">&nbsp;</a>
-            <a id="IDNav-back">&nbsp;</a>
+            <a id="IDNav-fist" class="flat">&nbsp;</a>
+            <br class="cl" />
+            <a id="IDNav-back" class="flat">&nbsp;</a>
             <br class="cl" />
             <input type="text" id="IDNav-id" />
             <br class="cl" />
-            <a id="IDNav-next">&nbsp;</a>
-            <a id="IDNav-last">&nbsp;</a>
+            <a id="IDNav-next" class="flat">&nbsp;</a>
+            <br class="cl" />
+            <a id="IDNav-last" class="flat">&nbsp;</a>
             
             <br class="cl" />
+            <hr />
             
             <!--<div class="separator">&nbsp;</div> -->
-            <a id="IDNav-insert">&nbsp;</a>
-            <a id="IDNav-delete">&nbsp;</a>
+            <a id="IDNav-insert" class="square">&nbsp;</a>
+            <a id="IDNav-delete" class="square">&nbsp;</a>
+            
             <br class="cl" />
+            <hr />
+            
             <!--<div class="separator">&nbsp;</div> -->
-            <a id="IDNav-save">&nbsp;</a>
+            <a id="IDNav-save" class="square">&nbsp;</a>
           </div>
         </section>
         <br class="cl" />
