--- a/css/edit-people.css
+++ b/css/edit-people.css
@@ -63,8 +63,7 @@
 
 #IDNavigator
 {
-    border: 1px solid black;
-    padding: 4px;
+    text-align: center;
 }
 #IDNavigator *
 {
@@ -84,17 +83,32 @@
 
 
 
-#IDNavigator a
+#IDNavigator a.square
 {
     display: inline-block;
     
     border: 1px outset;
     
-    width: 32px;
-    height: 32px;
-    padding: 2px;
+    width: 16px;
+    height: 16px;
+    padding: 4px;
     
-    background-image: url(/img/sprite-kiwi-pack.png);
+    background-image: url(/img/jquery-ui/ui-icons_222222_256x240.png);
+    background-origin: content-box;
+    background-clip: content-box;
+}
+#IDNavigator a.flat
+{
+    display: inline-block;
+    
+    border: 1px outset;
+    
+    width: 16px;
+    height: 16px;
+    /* T R B L */
+    padding: 2px 22px 2px 22px;
+    
+    background-image: url(/img/jquery-ui/ui-icons_222222_256x240.png);
     background-origin: content-box;
     background-clip: content-box;
 }
@@ -113,18 +127,18 @@
 }
 #IDNav-id
 {
-    width: 45px;
+    width: 60px;
 }
 
 
-#IDNav-fist { background-position:  -96px -160px; }
-#IDNav-back { background-position: -192px -160px; }
-#IDNav-next { background-position:  -96px  -64px; }
-#IDNav-last { background-position: -128px -128px; }
-#IDNav-search { background-position:  -64px -160px; }
-#IDNav-insert { background-position: -128px  -96px; }
-#IDNav-delete { background-position:  -32px  -64px; }
-#IDNav-save { background-position:  -32px -192px; }
+#IDNav-fist { background-position:  -192px -48px; }
+#IDNav-back { background-position:     0px -48px; }
+#IDNav-next { background-position:   -64px -48px; }
+#IDNav-last { background-position:  -224px -48px; }
+
+#IDNav-insert { background-position: -32px -128px; }
+#IDNav-delete { background-position: -64px -128px; }
+#IDNav-save { background-position:   -96px -112px; }
 
 
 
