--- a/inc/templates/edit-people.html
+++ b/inc/templates/edit-people.html
@@ -117,8 +117,11 @@
                 <td><input type="text" id="Field-Land" /></td>
               </tr>
               <tr>
-                <td>&nbsp;</td>
-                <td><input type="checkbox" id="Field-Post" /><label for="Field-Post">Stelt prijs op post</label></td>
+                <td><label for="Field-Post">Wil post:</label></td>
+                <td class="switch-wrapper small">
+                  <div style="display: inline-block;"><span class="switch-enable"><span>Ja</span></span> <span class="switch-disable selected"><span>Neen</span></span></div>
+                  <input type="checkbox" id="Field-Post" class="checkbox">
+                </p>
                 
                 <td class="label"><label for="Field-Geboortedatum">Geboortedatum</label></td>
                 <td><input type="date" class="datepicker" id="Field-Geboortedatum" /></td>
