--- a/inc/templates/edit-people.html
+++ b/inc/templates/edit-people.html
@@ -150,11 +150,11 @@
             </table>
             <br class="cl" />
             <div id="sgr-accordion">
-              <h3><a href="#">Studies</a></h3>
+              <h3><a href="#">Studies <span /></a></h3>
               <div id="Studies"  class="special_label">&nbsp;</div>
-              <h3><a href="#">Secties/commissies</a></h3>
+              <h3><a href="#">Secties/commissies <span /></a></h3>
               <div id="Secties"  class="special_label">&nbsp;</div>
-              <h3><a href="#">Relaties</a></h3>
+              <h3><a href="#">Relaties <span /></a></h3>
               <div id="Relaties" class="special_label">&nbsp;</div>
             </div>
           </form>
