Kleine javascript-fixes in het bewerkscherm

--- a/inc/templates/edit-people.html
+++ b/inc/templates/edit-people.html
@@ -61,6 +61,7 @@
         </div>
         
         <section class="grid_11">
+          <input type="hidden" id="Field-Opm" />
           <form id="EditPeople" class="form">
             <table>
               <tr>
@@ -87,9 +88,9 @@
                 <td class="label"><label for="Field-Geslacht">Geslacht</label></td>
                 <td>
                   <select id="Field-Geslacht">
-                    <option>Man</option>
-                    <option>Vrouw</option>
-                    <option>Onbekend</option>
+                    <option value="man">Man</option>
+                    <option value="vrouw">Vrouw</option>
+                    <option value="onbekend">Onbekend</option>
                   </select>
                 </td>
                 
