Zelf studies toevoegen. Eindelijk!

--- a/css/edit-people.css
+++ b/css/edit-people.css
@@ -174,3 +174,12 @@ td.special_label ul
 }
 
 
+#studie_niet_gevonden
+{
+    color: #5E94C3;
+    font-size: 12px;
+    margin-top: 10px;
+    display: block;
+}
+
+
