--- a/inc/templates/edit-people.html
+++ b/inc/templates/edit-people.html
@@ -234,6 +234,16 @@
             </div></td>
           </tr>
           <tr>
+            <td colspan="2">
+              <a href="" id="studie_niet_gevonden">Hij staat er niet bij!</a>
+              <label style="margin-bottom: 0px; margin-top: 10px; display: none;">
+                Studienaam:
+                <input type="text" id="nieuwe_studienaam" />
+                <button class="blue small" type="button" id="maak_nieuwe_studie" style="vertical-align: baseline;">aanmaken</button>
+              </label>
+            </td>
+          </tr>
+          <tr>
             <td><button class="red" type="button" id="delete" style="margin-top: 15px;">Verwijderen</button></td>
             <td><button             type="button" id="save" style="margin-top: 15px; float: right;">Opslaan</button></td>
           </tr>
